--- a/curso_em_vídeo/html_css/module_2/ex-011/style.css
+++ b/curso_em_vídeo/html_css/module_2/ex-011/style.css
@@ -6,10 +6,15 @@ body {
 
 div {
     font-weight: bolder;
+    width: 600px;
+    border-radius: .5em;
 }
 
 div:hover {
-    background-color: rgb(29, 253, 8);
+    background-color: rgb(253, 65, 8);
+    transition: .2s;
+    text-align: center;
+    padding: 2em;
 }
 
 div > p {
@@ -17,6 +22,7 @@ div > p {
 }
 
 div:hover > p {
-    color: rgb(38, 0, 255);
+    color: rgb(255, 255, 255);
     display: block;
+    padding: 1em;
 }
