--- a/curso_em_vídeo/html_css/module_3/ex-012/style.css
+++ b/curso_em_vídeo/html_css/module_3/ex-012/style.css
@@ -11,6 +11,7 @@ body {
 table {
     border-collapse: collapse;
     margin: auto;
+    position: relative;
 }
 
 th {
@@ -27,6 +28,11 @@ td {
     height: 25px;
     text-align: center;
     border: 1px solid black;
+}
+
+thead th {
+    position: sticky;
+    top: -1px;
 }
 
 /* Zebra Effect (n) \/ */
