--- a/curso_em_vídeo/html_css/module_4/ex-002/style.css
+++ b/curso_em_vídeo/html_css/module_4/ex-002/style.css
@@ -3,10 +3,32 @@
 body {
     margin: auto;
     max-width: 600px;
+    font-family: helvetica, arial, sans-serif;
+    padding: 0 1em;
 }
 
-iframe {
+iframe#p1 {
     border-radius: .5em;
     display: block;
     margin: auto;
+}
+
+a {
+    color: black;
+    text-decoration: underline;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+a:visited {
+    color: black;
+}
+
+iframe#screen {
+    width: 100%;
+    height: 400px;
+    border: 2px solid black;
+    border-radius: .5em;
 }
