--- a/curso_em_vídeo/html_css/module_4/ex-005 - Final Project Module/styles/style-1.css
+++ b/curso_em_vídeo/html_css/module_4/ex-005 - Final Project Module/styles/style-1.css
@@ -3,10 +3,13 @@
 * {
     margin: 0;
     padding: 0;
+    border: 0;
+    outline: 0;
     font-family: Helvetica, arial, sans-serif;
 }
 
-html, body {
+html,
+body {
     height: 100vh;
     width: 100vw;
     background-color: aqua;
@@ -15,25 +18,54 @@ html, body {
 main {
     height: 100vh;
     position: relative;
-    background-image: linear-gradient(90deg, aquamarine, rgb(217, 255, 242), aquamarine);
+    background-image: linear-gradient(90deg, #00b4d8, #90e0ef, #00b4d8);
 }
 
-section#smartphone {
+img#smartphone {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
     height: 500px;
     width: 312.8px;
-    background-color: black;
-    background: url('../images/iphonexr.png') no-repeat center center;
+    z-index: 1;
 }
 
 iframe#screen {
-    position: relative;
-    top: 24px;
-    left: 49px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 49.9%;
+    left: 49.75%;
     width: 208px;
     height: 450px;
+}
+
+section#social-icons {
+    position: relative;
+    text-align: right;
+    margin-right: 50px;
+    top: 50vh;
+    transform: translate(0%, -50%);
+}
+
+section#social-icons svg {
+    width: 31px;
+    height: 31px;
+    fill: white;
+}
+
+section#social-icons div {
+    box-shadow: 0 0 .5em 0em rgba(0, 0, 0, 0.212);
+    display: inline-block;
+    background-color: #ff006e;
+    text-align: center;
+    border-radius: 50%;
+    padding: 9px;
+    margin-bottom: 20px;
+}
+
+section#social-icons div:hover {
+    cursor: pointer;
+    transition: .2s;
+    background-color: hsl(334, 100%, 63%)5
 }
