--- a/curso_em_vídeo/html_css/module_4/ex-005 - Final Project Module/styles/style-1.css
+++ b/curso_em_vídeo/html_css/module_4/ex-005 - Final Project Module/styles/style-1.css
@@ -21,23 +21,26 @@ main {
     background-image: linear-gradient(90deg, #00b4d8, #90e0ef, #00b4d8);
 }
 
-img#smartphone {
+section#main {
     position: absolute;
+    width: 312.8px;
+    height: 500px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 500px;
-    width: 312.8px;
-    z-index: 1;
+    background-image: url('../images/smartphone.png');
+    background-repeat: no-repeat;
 }
 
 iframe#screen {
     position: absolute;
     transform: translate(-50%, -50%);
-    top: 49.9%;
-    left: 49.75%;
-    width: 208px;
-    height: 450px;
+    top: 50.4%;
+    left: 47.9%;
+    width: 210px;
+    height: 457px;
+    border-radius: 1.45em;
+    z-index: 5;
 }
 
 section#social-icons {
@@ -46,15 +49,16 @@ section#social-icons {
     margin-right: 50px;
     top: 50vh;
     transform: translate(0%, -50%);
+    z-index: 1;
 }
 
-section#social-icons svg {
+section#social-icons a {
     width: 31px;
     height: 31px;
     fill: white;
 }
 
-section#social-icons div {
+section#social-icons a {
     display: inline-block;
     background-color: #ff006e;
     text-align: center;
@@ -63,7 +67,7 @@ section#social-icons div {
     margin-bottom: 20px;
 }
 
-section#social-icons div:hover {
+section#social-icons a:hover {
     cursor: pointer;
     transition: .2s;
     background-color: hsl(334, 100%, 60%);
